# scholar-rag

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  pyproject.toml
rust/: Cargo.toml  pyproject.toml
rust/src/: lib.rs
scripts/: bench_bm25.py  ingest_corpus.py
src/scholar_rag/: config.py  eval.py  ingest.py  models.py
src/scholar_rag/chunking/: chunker.py  cleaning.py  sections.py  tokenizer.py
src/scholar_rag/embedding/: base.py  sentence_transformer.py
src/scholar_rag/generation/: base.py  openrouter.py  prompt.py
src/scholar_rag/retrieval/: base.py  bm25.py  dense.py  hybrid.py  rust_bm25.py
src/scholar_rag/serve/: app.py  engine.py  feedback_store.py  ratelimit.py  schemas.py
src/scholar_rag/sources/: arxiv.py  base.py  local_pdf.py  pdf_text.py  validation.py
src/scholar_rag/store/: base.py  faiss_store.py
tests/: fakes.py  test_arxiv_source.py  test_chunker.py  test_cleaning.py  test_embedding.py  test_eval.py  test_faiss_store.py  test_generation.py  test_ingest.py  test_local_pdf_source.py  test_prompt.py  test_ratelimit.py  test_retrieval.py  test_sections.py  test_validation.py
